--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     </section>
   </template>
   <script src="functions.js"></script>
-  <script src="main.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
